build: bump sveltekit
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/app.html
+++ b/src/app.html
@@ -16,9 +16,9 @@
     <link href="/icons/icon-512x512.png" rel="apple-touch-icon" sizes="512x512" />
     <link href="/sitemap/sitemap-index.xml" rel="sitemap" type="application/xml" />
     <link href="/rss.xml" rel="alternate" title="David Dal Busco&#x27;s RSS Feed" type="application/rss+xml" />
-    %svelte.head%
+    %sveltekit.head%
   </head>
   <body>
-    <div id="svelte">%svelte.body%</div>
+    <div>%sveltekit.body%</div>
   </body>
 </html>
