feat: google search console - I deleted the TXT DNS entry

--- a/src/app.html
+++ b/src/app.html
@@ -21,6 +21,7 @@
 			title="David Dal Busco&#x27;s RSS Feed"
 			type="application/rss+xml"
 		/>
+		<meta name="google-site-verification" content="MN7tFl4-DoVbSEs95kr28GSJK6FO_9Ub-lMW2h51ZjM" />
 		%sveltekit.head%
 	</head>
 	<body>
