feat: stupid favicon

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
-		<link href="/favicon-32x32.png" rel="icon" type="image/png" />
+		<link rel="icon" href="/favicon.ico" sizes="32x32" />
+		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 		<link crossorigin="anonymous" href="/manifest.webmanifest" rel="manifest" />
 		<meta content="#2d294c" name="theme-color" />
 		<link href="/icons/icon-48x48.png" rel="apple-touch-icon" sizes="48x48" />
